--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -395,19 +395,66 @@ body:not(.home) {
                                                         margin-bottom: 20px;
                                                     }
                                                     .btn-vermas {
-                                                        background-image: url(../img/icon_plus.svg);
+                                                        background-image: url(../../../base/img/icon_plus.svg);
                                                     }
                                                     .btn-ed {
-                                                        background-image: url(../img/icon_chat.svg);
+                                                        background-image: url(../../../base/img/icon_chat.svg);
                                                     }
                                                     .btn-wp {
-                                                        background-image: url(../img/icon-wp.svg);
+                                                        background-image: url(../../../base/img/icon-wp.svg);
                                                     }
                                                     .btn-hero:hover {
                                                         border-color: $secondary;
                                                         background-color: $secondary;
                                                         color: $primary;
                                                     }
+                                                }
+                                                .pent-sesion {
+                                                    padding-left: 70px;
+                                                    background-repeat: no-repeat;
+                                                    background-size: 50px;
+                                                    max-width: 800px;
+                                                    margin-top: 5rem;
+                                                    @media (max-width: 576px) {
+                                                        padding-left: 0;
+                                                        padding-top: 5rem;
+                                                    }
+                                                    h3 {
+                                                        @include subtitle;
+                                                        background: transparent;
+                                                        border-right: none;
+                                                        padding: 0;
+                                                        padding-top: 5px;
+                                                    }
+                                                    h6 {
+                                                        color: $grey3;
+                                                        font-size: $fs-base;
+                                                        font-weight: 400 !important;
+                                                        font-family: 'Roboto';
+                                                        margin-bottom: 2rem;
+                                                        line-height: 120%;
+                                                    }
+                                                }
+                                                .pent-sesion-1 {
+                                                    background-image: url(../../../base/img/sesion1.svg);
+                                                    @media (max-width: 768px) {
+                                                        margin-top: 0;
+                                                    }
+                                                }
+                                                .pent-sesion-2 {
+                                                    background-image: url(../../../base/img/sesion2.svg);
+                                                }
+                                                .pent-sesion-3 {
+                                                    background-image: url(../../../base/img/sesion3.svg);
+                                                }
+                                                .pent-sesion-4 {
+                                                    background-image: url(../../../base/img/sesion4.svg);
+                                                }
+                                                .pent-sesion-5 {
+                                                    background-image: url(../../../base/img/sesion5.svg);
+                                                }
+                                                .pent-sesion-6 {
+                                                    background-image: url(../../../base/img/sesion6.svg);
                                                 }
                                             }
                                         }
@@ -419,31 +466,34 @@ body:not(.home) {
                 }
             }
         }
-    }
-    // subrayado
-    .subrayado {
-        position: relative;
-        z-index: 2;
-    }
-    .subrayado::after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 5px;
-        bottom: 0px;
-        left: 0;
-        background-color: #FFD658;
-        z-index: -1;
-        animation: animarSubrayado 1s linear forwards;
-    }
-    @keyframes animarSubrayado {
-        0% {
-            transform: scaleX(0);
-            transform-origin: left;
+        p {
+            @include body;
         }
-        100% {
-            transform: scaleX(1);
-            transform-origin: left;
+        // subrayado
+        .subrayado {
+            position: relative;
+            z-index: 2;
+        }
+        .subrayado::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 5px;
+            bottom: 0px;
+            left: 0;
+            background-color: #FFD658;
+            z-index: -1;
+            animation: animarSubrayado 1s linear forwards;
+        }
+        @keyframes animarSubrayado {
+            0% {
+                transform: scaleX(0);
+                transform-origin: left;
+            }
+            100% {
+                transform: scaleX(1);
+                transform-origin: left;
+            }
         }
     }
 }
