--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -66,7 +66,6 @@ body.home {
                                                         background-color: transparent;
                                                         padding: 0 !important;
                                                     }
-                                                    p.fecha {}
                                                 }
                                             }
                                         }
@@ -74,7 +73,11 @@ body.home {
                                     ul.section {
                                         display: none !important;
                                     }
+                                    button.btn.btn-link.text-decoration-none.section-modchooser.section-modchooser-link.activity-add.d-flex.align-items-center.p-3.mb-3 {
+                                        display: none !important;
+                                    }
                                     .mdl-left.py-2.changenumsections {
+                                        border-top: 0;
                                         a {
                                             color: black;
                                         }
